<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.rabbitforever.datamanipulation</groupId>
	<artifactId>datamanipulation</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>RabbitDataManipulationTools</name>
	<url>http://maven.apache.org</url>
	<build>
		<finalName>cssatesting</finalName>

		<plugins>
<!-- 			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-antrun-plugin</artifactId>
				<version>1.8</version>
				<executions>
					<execution>
						<id>jar_frw</id>
						<phase>package</phase>
						<configuration>
							<tasks>
								<ant antfile="${basedir}/build_frw.xml">
									<target name="install_frw" />
								</ant>
							</tasks>
						</configuration>
						<goals>
							<goal>run</goal>
						</goals>
					</execution>
					<execution>
						<id>copy_cssa_flow_test_jar</id>
						<phase>install</phase>
						<configuration>
							<tasks>
								<ant antfile="${basedir}/build_frw.xml">
									<target name="copy_jar" />
								</ant>
							</tasks>
						</configuration>
						<goals>
							<goal>run</goal>
						</goals>
					</execution>
				</executions>
			</plugin> -->
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>2.5.3</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>2.8</version>
			</plugin>
			<plugin>
				<artifactId>maven-release-plugin</artifactId>
				<version>2.3.2</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.6</version>
				<configuration>
					<excludes>
						<exclude>mysql.db.properties</exclude>
						<exclude>db2.db.properties</exclude>
						<exclude>sys.properties</exclude>
						<exclude>log4j.properties</exclude>
					</excludes>
					<archive>
						<manifestFile>${basedir}/config/MANIFEST.MF</manifestFile>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-deploy-plugin</artifactId>
				<version>2.7</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<argLine>-Xmx1024m
						-XX:MaxPermSize=256m
					</argLine>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.0</version>
				<configuration>
					<parallel>methods</parallel>
					<threadCount>1</threadCount>
					<includes>
						<include>**/*Test.java</include>
					</includes>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>org.apache.maven.surefire</groupId>
						<artifactId>surefire-junit47</artifactId>
						<version>2.19.1</version>
					</dependency>
				</dependencies>
			</plugin>
		</plugins>

	</build>
	<repositories>
		<repository>
			<id>org.jboss.resteasy</id>
			<url>http://repository.jboss.org/maven2/</url>
		</repository>
		<repository>
			<id>sonatype-oss-snapshots</id>
			<name>Sonatype OSS Snapshots Repo</name>
			<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
		</repository>
		<repository>
			<id>alfresco</id>
			<name>alfresco</name>
			<url>https://artifacts.alfresco.com/nexus/content/groups/public/</url>
		</repository>
	</repositories>
	<properties>
		<jersey.version.java.1.8>2.25</jersey.version.java.1.8>
		<jaxrs.version.java.1.8>2.1</jaxrs.version.java.1.8>
		<jersey.scope.java.1.8>compile</jersey.scope.java.1.8>

		<jersey.version.java.1.7>1.19.2</jersey.version.java.1.7>
		<jaxrs.version.java.1.7>2.0</jaxrs.version.java.1.7>

		<poi.java.1.7>3.17</poi.java.1.7>
		<poi.java.1.8>3.9</poi.java.1.8>
		<!-- <org.springframework.version>5.0.6.RELEASE</org.springframework.version> 
			<org.hibernate.version>5.2.17.Final</org.hibernate.version> -->
		<cxf.version>3.1.5</cxf.version>
		<jackson.version>1.9.10</jackson.version>

		<failOnMissingWebXml>false</failOnMissingWebXml>
		<spring.version>5.1.5.RELEASE</spring.version>
		<hibernate.version>5.4.1.Final</hibernate.version>
		<hibernate.validator>5.4.1.Final</hibernate.validator>
		<hibernate.annotation>5.1.0.Final</hibernate.annotation>
		<c3p0.version>0.9.5.3</c3p0.version>
		<jstl.version>1.2.1</jstl.version>
		<tld.version>1.1.2</tld.version>
		<servlets.version>3.1.0</servlets.version>
		<jsp.version>2.3.1</jsp.version>
		<hsqldb.version>1.8.0.10</hsqldb.version>
		<jackson.databind-version>2.2.3</jackson.databind-version>
		<quartz-scheduler>2.3.0</quartz-scheduler>
		<javaee-api>8.0</javaee-api>
	</properties>
	<dependencies>
		<!-- Hibernate Core -->
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-core</artifactId>
			<version>${hibernate.version}</version>
		</dependency>
		<dependency>
			<groupId>org.hibernate.common</groupId>
			<artifactId>hibernate-commons-annotations</artifactId>
			<version>${hibernate.annotation}</version>
		</dependency>

		<!-- Hibernate-C3P0 Integration -->
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-c3p0</artifactId>
			<version>${hibernate.version}</version>
		</dependency>
		<dependency>
			<groupId>com.ibm.db2.jcc</groupId>
			<artifactId>db2jcc4</artifactId>
			<version>10.1</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml</groupId>
			<artifactId>classmate</artifactId>
			<version>1.3.1</version>
		</dependency>
		<dependency>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-resources-plugin</artifactId>
			<version>2.7</version>
		</dependency>
		<dependency>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-deploy-plugin</artifactId>
			<version>2.7</version>
		</dependency>
		<dependency>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-jar-plugin</artifactId>
			<version>2.6</version>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>1.7.21</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.21</version>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>jcl-over-slf4j</artifactId>
			<version>1.7.21</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-jdk14</artifactId>
			<version>1.7.5</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-nop</artifactId>
			<version>1.7.7</version>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<!--  <scope>test</scope> -->
		</dependency>
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>5.1.34</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.persistence</groupId>
			<artifactId>javax.persistence</artifactId>
			<version>2.1.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-io</artifactId>
			<version>1.3.2</version>
		</dependency>
<!-- 		<dependency>
			<groupId>hksarg.swd.csss</groupId>
			<artifactId>frw</artifactId>
			<version>1.0</version>
		</dependency> -->
		<!-- <dependency> <groupId>org.dbunit</groupId> <artifactId>dbunit</artifactId> 
			<version>2.5.3-SNAPSHOT</version> <scope>test</scope> </dependency> -->
		<dependency>
			<groupId>org.dbunit</groupId>
			<artifactId>dbunit</artifactId>
			<version>2.5.2</version>
		</dependency>
		<dependency>
			<groupId>javax.validation</groupId>
			<artifactId>validation-api</artifactId>
			<version>1.0.0.GA</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.4</version>
		</dependency>
		<dependency>
			<groupId>com.microsoft.sqlserver</groupId>
			<artifactId>sqljdbc4</artifactId>
			<version>4.0</version>
		</dependency>
	</dependencies>
</project>